# membership_protocol

./: CMakeLists.txt  README.md
mp1/: Application  MP1Node.cpp  MP1Node.h
